<resources>
    <string name="app_name">PARIS 8 - Agenda </string>
    <string name="btnValidConnection">Valider</string>
    <string name="btnCancelConnection">Annuler</string>
    <string name="txtAgenda">Connexion Agenda THYP</string>
    <string name="title_activity_edtday">EDTDAY</string>
    <string name="title_activity_affiche_exam">AfficheExam</string>
    <string name="title_activity_edt_week">EdtWeek</string>
    <string name="title_activity_gestion_edt">Gestion des cours</string>
    <string name="title_activity_gestion_absences">Gestion des absences</string>
    <string name="title_activity_absences">Prof abscent</string>
    <string name="title_activity_gestion_examen">Gestion des examens</string>
    <string name="title_activity_select_class_room">SelectClassRoom</string>
    <string name="title_activity_select_hours">SelectHours</string>
    <string name="mdp">Mot de passe:</string>
    <string name="numEtudiant">Identifiant:</string>
    <string name="buttonDay">buttonDay</string>
    <string name="title_activity_activity_activity_menu1">activity_activity_menu1</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

       <string name="action_settings">Settings</string>
    <string name="EDT">Mon emploi du temps</string>
    <string name="EDT2">emploi du temps des etudiants</string>
    <string name="Abs">Liste des profs absents</string>
    <string name="Exam">Dates des examens</string>
    <string name="idcours">ok</string>
    <string name="AjtCours">Ajouter un cours</string>
    <string name="AjtAbs">Ajouter une abscence</string>
    <string name="AjtExam">ajouter un examen</string>
    <string name="AjtSalle">Ajouter une salle</string>
    <string name="BtnAjouter">Ajouter</string>
    <string name="BtnAnnuler">Annuler</string>

    <string name="StrDeco">Déconnexion</string>
    <string name="StrOui">Oui</string>
    <string name="StrNon">Non</string>
    <string name="menu_settings">Settings</string>

</resources>
