<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ActivityConnection"
    android:background="@drawable/abc_popup_background_mtrl_mult">

    <TextView
        android:text="@string/txtAgenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:textSize="@dimen/abc_text_size_menu_material"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp" />


    <Button
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnValidConnection"
        android:id="@+id/btnValidCo"
        android:textStyle="bold"
        android:layout_marginBottom="105dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/btnCancelCo"
        android:layout_alignStart="@+id/btnCancelCo"
        android:layout_alignRight="@+id/edTxtPwd"
        android:layout_alignEnd="@+id/edTxtPwd" />

    <Button
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancelConnection"
        android:id="@+id/btnCancelCo"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/edTxtPwd"
        android:layout_alignStart="@+id/edTxtPwd"
        android:layout_marginBottom="45dp"
        android:layout_alignRight="@+id/edTxtPwd"
        android:layout_alignEnd="@+id/edTxtPwd" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/mdp"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Identifiant:"
        android:id="@+id/textView3"
        android:layout_marginTop="66dp"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/edTxtPseudo"
        android:inputType="textPersonName"
        android:layout_below="@+id/textView3"
        android:layout_alignLeft="@+id/edTxtPwd"
        android:layout_alignStart="@+id/edTxtPwd"
        android:layout_alignRight="@+id/edTxtPwd"
        android:layout_alignEnd="@+id/edTxtPwd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edTxtPwd"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

</RelativeLayout>
